--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="text-center lg:w-2/3 w-full">
             <h1 class="title-font sm:text-6xl text-3xl mb-4 font-extrabold text-white">Making Crypto Investing Simple
             </h1>
-            <p class="mb-8 text-3xl whitish leading-relaxed">We handpick and curate baskets of undervalued crypto <br>
+            <p class="mb-8 sm:text-3xl text-xl whitish leading-relaxed">We handpick and curate baskets of undervalued crypto <br>
               tokens so that you can invest seamlessly and win.</p>
             <div class="flex justify-center">
               <button
@@ -74,7 +74,7 @@
       <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 pt-20 md:flex-row flex-col items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-            <img  class="object-cover object-center rounded" alt="hero" src="./assets/images/phone.png">
+            <img  class="object-cover object-center rounded" alt="hero" src="./assets/images/phone.gif">
           </div>
           <div
             class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
@@ -110,39 +110,39 @@
             App</button>
         </div>
       </div>
-      <div class="swiper-container swiper-full-mobile swiper-container-initialized swiper-container-horizontal">
-      <div class="carousel carousel-center p-8 space-x-8  rounded-box">
-        <div class="carousel-item">
-          <img src="./assets/images/mobile1.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile2.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile3.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile4.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile5.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile6.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile7.png" alt="Pizza" />
+      <div class="swiper-full-mobile swiper-container-initialized swiper-container-horizontal">
+        <div class="carousel carousel-center p-8 space-x-8  rounded-box">
+          <div class="carousel-item">
+            <img src="./assets/images/mobile1.png" alt="Pizza" />
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/mobile2.png" alt="Pizza" />
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/mobile3.png" alt="Pizza" />
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/mobile4.png" alt="Pizza" />
+          </div> 
+          <div class="carousel-item">
+            <img src="./assets/images/mobile5.png" alt="Pizza" />
+          </div> 
+          <div class="carousel-item">
+            <img src="./assets/images/mobile6.png" alt="Pizza" />
+          </div> 
+          <div class="carousel-item">
+            <img src="./assets/images/mobile7.png" alt="Pizza" />
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/mobile8.png" alt="Pizza" />
+          </div> 
+          <div class="carousel-item">
+            <img src="./assets/images/mobile9.png" alt="Pizza" />
+          </div> 
+          <div class="carousel-item">
+            <img src="./assets/images/mobile10.png" alt="Pizza" />
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="./assets/images/mobile8.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile9.png" alt="Pizza" />
-        </div> 
-        <div class="carousel-item">
-          <img src="./assets/images/mobile10.png" alt="Pizza" />
-        </div>
-      </div>
       </div>
       
       <footer class="text-gray-600 body-font">
@@ -202,7 +202,7 @@
             class="rounded-lg px-4 py-2 border-2 border-gray-200 text-gray-200 hover:bg-gray-200 hover:text-gray-900 duration-300">Download
             App</button>
         </div>
-        <div class="mx-auto text-center px-4 py-6 text-3xl text-white font-bold">FAQs</div>
+        <div class="mx-auto text-center px-4 py-6 sm:text-5xl text-3xl text-white font-extrabold">FAQs</div>
       </div>
 
       <div class="">
@@ -211,10 +211,10 @@
             <dl class="mt-8 mx-auto max-w-screen-sm lg:max-w-screen-lg flex flex-col lg:flex-row lg:flex-wrap">
               <div class="lg:w-full">
                 <div
-                  class="question-and-answer select-none cursor-pointer border-2 mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="question-and-answer select-none cursor-pointer qna_border mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
-                      <div class="text-indigo-800 font-semibold">
+                      <div class="qna font-semibold">
                         Pre and post launch mobile app marketing pitfalls to avoid
                       </div>
                       <div>
@@ -237,10 +237,10 @@
               </div>
               <div class="lg:w-full">
                 <div
-                  class="question-and-answer select-none cursor-pointer border-2 mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="question-and-answer qna_border select-none cursor-pointer border-2 mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
-                      <div class="text-indigo-800 font-semibold">
+                      <div class="qna font-semibold">
                         What is your SLA Guarantee ?
                       </div>
                       <div>
@@ -263,10 +263,10 @@
               </div>
               <div class="lg:w-full">
                 <div
-                  class="question-and-answer select-none cursor-pointer border-2 mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="question-and-answer select-none cursor-pointer qna_border mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
-                      <div class="text-indigo-800 font-semibold">
+                      <div class="qna font-semibold">
                         Are there more Tailwind templates ?
                       </div>
                       <div>
@@ -289,10 +289,10 @@
               </div>
               <div class="lg:w-full">
                 <div
-                  class="question-and-answer select-none cursor-pointer border-2 mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="question-and-answer qna_border select-none cursor-pointer mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
-                      <div class="text-indigo-800 font-semibold">
+                      <div class="qna font-semibold">
                         Is this template free for commercial use ?
                       </div>
                       <div>
@@ -327,6 +327,8 @@
         integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
       <script>
         $('.question-and-answer').click(function () {
+          $(this).find(".qna").toggleClass("blue_border_add")
+          $(this).find(".qna_border").toggleClass("blue_border_add")
           $(this).find(".answer").toggleClass("hidden")
           $(this).find(".question-chevron").toggleClass("hidden")
         })
@@ -349,14 +351,14 @@
       <section class="text-gray-600 body-font">
         <div class="container px-5 pt-r mx-auto">
           <div class="flex flex-col text-center w-full mb-4">
-            <h1 class="text-4xl font-extrabold title-font mb-4 text-white">TEAM</h1>
+            <h1 class="sm:text-5xl text-3xl font-extrabold title-font mb-4 text-white">Team</h1>
           </div>
           <div class="flex justify-center -m-4">
             <div class="p-4 lg:w-1/4 md:w-1/2">
               <div class="h-full flex flex-col items-center text-center">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-60 object-contain object-center mb-4"
+                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-48 object-contain object-center mb-1"
                   src="./assets/images/daksh.png">
-                <div class="w-full">
+                <div class="mt-1 mb-3 w-full">
                   <h2 class="title-font font-bold text-xl text-white">Daksh Goel</h2>
                   <h3 class="whitish mb-3">CEO CoFounder</h3>
                 </div>
@@ -364,9 +366,9 @@
             </div>
             <div class="p-4 lg:w-1/4 md:w-1/2">
               <div class="h-full flex flex-col items-center text-center">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-60 object-contain object-center mb-4"
+                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-48 object-contain object-center mb-1"
                   src="./assets/images/shrish.png">
-                <div class="w-full">
+                <div class="mt-1 mb-3 w-full">
                   <h2 class="title-font font-bold text-xl text-white">Shrish Dwivedi</h2>
                   <h3 class="whitish mb-3">CTO/CFO CoFounder</h3>
                 </div>
@@ -405,39 +407,40 @@
       <section class="text-gray-600 body-font">
         <div class="mx-auto flex flex-col px-5 pt-14 justify-center items-center">
           <div class="w-full md:w-2/3 flex flex-col mb-16 items-center text-center">
-            <h1 class="title-font sm:text-5xl text-3xl mb-4 font-medium text-white">Download our App Today & <br>
+            <h1 class="title-font sm:text-5xl text-3xl mb-4 leading-6 font-extrabold text-white">Download our App Today & <br>
               Experience Endless Possibilites</h1>
             <button
-              class="inline-flex rounded-lg text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 text-lg">Download
+              class="inline-flex rounded-lg text-white bg-blue-500 border-0 py-2 px-6 my-2 focus:outline-none hover:bg-blue-600 text-lg">Download
               the app now</button>
-            <div class="flex w-full blue_border my-10 justify-between items-center">
-              <p class="text-3xl font-bold text-white">Subscribe to our <br> Monthly Newsletter</p>
+            <div class="flex w-full blue_border my-12 justify-between items-center">
+              <p class="text-xl font-bold text-white">Subscribe to our <br> Monthly Newsletter</p>
+              <div class="flex-1"></div>
               <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4 md:w-full text-left">
-                <input type="text" id="hero-field" name="hero-field"
-                  class="w-full rounded focus:ring-2 focus:ring-indigo-200 focus:bg-transparent border-b border-gray-300 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                <input type="text" id="hero-field" placeholder="Enter your email address" name="hero-field"
+                  class="w-full rounded inp_field focus:ring-2 focus:ring-indigo-200 focus:bg-transparent border-b border-gray-300 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>
               <button
                 class="rounded-lg px-4 py-2 border-2 border-gray-200 text-gray-200 hover:bg-gray-200 hover:text-gray-900 duration-300">Register</button>
             </div>
-            <div class="flex justify-evenly">
+            <div class="flex justify-between">
               <button
-                class="bg-gray-100 inline-flex mx-3 py-3 px-5 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
-                <img src="./assets/images/twitter.png" alt="">
+                class="bg-gray-100 inline-flex mx-3 py-3 px-4 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
+                <img class="h-3.5" src="./assets/images/twitter.png" alt="">
               </button>
               <button
-                class="bg-gray-100 inline-flex mx-3 py-3 px-5 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
-                <img src="./assets/images/insta.png" alt="">
+                class="bg-gray-100 inline-flex mx-3 py-3 px-4 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
+                <img class="h-4" src="./assets/images/insta.png" alt="">
               </button>
               <button
-                class="bg-gray-100 inline-flex mx-3 py-3 px-5 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
-                <img src="./assets/images/linkedin.png" alt="">
+                class="bg-gray-100 inline-flex mx-3 py-3 px-4 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
+                <img class="h-4" src="./assets/images/linkedin.png" alt="">
               </button>
             </div>
           </div>
         </div>
         <footer class="text-gray-600 body-font">
           <div class="flex justify-center">
-            <img class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/home.png" alt="">
+            <img class="mix-blend-lighten opacity-60" src="./assets/images/home.png" alt="">
           </div>
         </footer>
       </section>
