--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/fullpage.min.css">
+  <link rel="stylesheet" href="./assets/css/onepage-scroll.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link
       href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css"
       rel="stylesheet"
       type="text/css"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
   <title>Document</title>
@@ -22,8 +23,8 @@
 
 
 
-  <div id="fullpage">
-    <div class="section s1">
+  <div class="main" id="fullpage">
+    <section class="section s1">
       <div class="text-gray-600 text-white body-font">
         <div class="container mx-auto flex flex-wrap px-5 py-3 justify-between flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -35,7 +36,7 @@
             App</button>
         </div>
       </div>
-      <section class="text-gray-600 body-font">
+      <div class="text-gray-600 body-font">
         <div class="mx-auto flex px-5 py-24 items-center justify-center flex-col">
           <div class="text-center lg:w-2/3 w-full">
             <h1 class="title-font sm:text-6xl text-3xl mb-4 font-extrabold text-white">Making Crypto Investing Simple
@@ -52,14 +53,14 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <footer class="text-gray-600 body-font">
         <div class="flex justify-center">
           <img class="mix-blend-lighten opacity-60" src="./assets/images/mouse.png" alt="">
         </div>
       </footer>
-    </div>
-    <div class="section s2">
+    </section>
+    <section class="section s2">
       <div class="text-gray-600 text-white body-font">
         <div class="container mx-auto flex flex-wrap px-5 py-3 justify-between flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -71,8 +72,8 @@
             App</button>
         </div>
       </div>
-      <section class="text-gray-600 body-font">
-        <div class="container mx-auto flex px-5 pt-20 md:flex-row flex-col items-center">
+      <div class="text-gray-600 body-font">
+        <div class="container mx-auto flex px-5 pt-14 md:flex-row flex-col items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
             <img  class="object-cover object-center rounded" alt="hero" src="./assets/images/phone.gif">
           </div>
@@ -89,15 +90,15 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <footer class="text-gray-600 body-font">
         <div class="flex justify-center">
-          <img class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
-          <img class="mix-blend-lighten opacity-60 rotate-180" src="./assets/images/arrow.png" alt="">
+          <img onclick="up()" class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
+          <img onclick="down()" class="mix-blend-lighten opacity-60 mr-5 rotate-180" src="./assets/images/arrow.png" alt="">
         </div>
       </footer>
-    </div>
-    <div class="section s3">
+    </section>
+    <section class="section s3">
       <!-- <section> -->
       <div class="text-gray-600 text-white body-font">
         <div class="container mx-auto flex flex-wrap px-5 py-3 justify-between flex-col md:flex-row items-center">
@@ -147,13 +148,13 @@
       
       <footer class="text-gray-600 body-font">
         <div class="flex justify-center">
-          <img class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
-          <img class="mix-blend-lighten opacity-60 rotate-180" src="./assets/images/arrow.png" alt="">
+          <img onclick="up()" class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
+          <img onclick="down()" class="mix-blend-lighten opacity-60 mr-5 rotate-180" src="./assets/images/arrow.png" alt="">
         </div>
       </footer>
-    </div>
+    </section>
 
-    <div class="section s4">
+    <section class="section s4">
       <div class="text-gray-600 text-white body-font">
         <div class="container mx-auto flex flex-wrap px-5 py-3 justify-between flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -165,8 +166,8 @@
             App</button>
         </div>
       </div>
-      <section class="text-gray-600 body-font">
-        <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+      <div class="text-gray-600 body-font">
+        <div class="container vert mx-auto px-5 py-24 items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
             <img class="object-cover object-center rounded" alt="hero" src="./assets/images/dbs.png">
           </div>
@@ -182,18 +183,18 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <footer class="text-gray-600 body-font">
         <div class="flex justify-center">
-          <img class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
-          <img class="mix-blend-lighten opacity-60 rotate-180" src="./assets/images/arrow.png" alt="">
+          <img onclick="up()" class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
+          <img onclick="down()" class="mix-blend-lighten opacity-60 mr-5 rotate-180" src="./assets/images/arrow.png" alt="">
         </div>
       </footer>
-    </div>
+    </section>
 
-    <div class="section bg-white">
+    <section class="section bg-white">
       <div class="text-gray-600 bgnew mb-12 text-white body-font">
-        <div class="container mx-auto flex flex-wrap px-5 py-10 justify-between flex-col md:flex-row items-center">
+        <div class="container mx-auto flex flex-wrap px-5 py-3 justify-between flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
             <img src="./assets/images/logo2.png" alt="">
             <span class="ml-3 text-4xl text-white font-bold">CryptoCase</span>
@@ -209,9 +210,9 @@
         <div>
           <div>
             <dl class="mt-8 mx-auto max-w-screen-sm lg:max-w-screen-lg flex flex-col lg:flex-row lg:flex-wrap">
-              <div class="lg:w-full">
+              <div class="question-and-answer lg:w-full">
                 <div
-                  class="question-and-answer select-none cursor-pointer qna_border mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="select-none cursor-pointer qna_border mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
                       <div class="qna font-semibold">
@@ -235,9 +236,9 @@
                   </dd>
                 </div>
               </div>
-              <div class="lg:w-full">
+              <div class="question-and-answer lg:w-full">
                 <div
-                  class="question-and-answer qna_border select-none cursor-pointer border-2 mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="qna_border select-none cursor-pointer border-2 mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
                       <div class="qna font-semibold">
@@ -261,9 +262,9 @@
                   </dd>
                 </div>
               </div>
-              <div class="lg:w-full">
+              <div class="question-and-answer lg:w-full">
                 <div
-                  class="question-and-answer select-none cursor-pointer qna_border mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="select-none cursor-pointer qna_border mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
                       <div class="qna font-semibold">
@@ -287,9 +288,9 @@
                   </dd>
                 </div>
               </div>
-              <div class="lg:w-full">
+              <div class="question-and-answer lg:w-full">
                 <div
-                  class="question-and-answer qna_border select-none cursor-pointer mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
+                  class="qna_border select-none cursor-pointer mx-8 my-3 px-6 py-4 rounded-lg text-sm group">
                   <dt class="question">
                     <div class="flex justify-between">
                       <div class="qna font-semibold">
@@ -319,8 +320,8 @@
       </div>
       <footer class="text-gray-600 body-font">
         <div class="flex justify-center">
-          <img class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
-          <img class="mix-blend-lighten opacity-60 rotate-180" src="./assets/images/arrow.png" alt="">
+          <img onclick="up()" class="mr-5" src="./assets/images/black_arrow.png" alt="">
+          <img onclick="down()" class="mr-5 rotate-180" src="./assets/images/black_arrow.png" alt="">
         </div>
       </footer>
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -333,11 +334,11 @@
           $(this).find(".question-chevron").toggleClass("hidden")
         })
       </script>
-    </div>
+    </section>
 
-    <div class="section s6">
+    <section class="section s6">
       <div class="text-gray-600 text-white body-font">
-        <div class="container mx-auto flex flex-wrap justify-between flex-col md:flex-row items-center">
+        <div class="container mx-auto flex flex-wrap py-3 justify-between flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
             <img src="./assets/images/logo2.png" alt="">
             <span class="ml-3 text-4xl text-white font-bold">CryptoCase</span>
@@ -348,7 +349,7 @@
         </div>
       </div>
 
-      <section class="text-gray-600 body-font">
+      <div class="text-gray-600 body-font">
         <div class="container px-5 pt-r mx-auto">
           <div class="flex flex-col text-center w-full mb-4">
             <h1 class="sm:text-5xl text-3xl font-extrabold title-font mb-4 text-white">Team</h1>
@@ -376,7 +377,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <div class="relative mb-12 flex justify-center">
         <div class="lg:w-1/2 w-3/4 flex flex-col justify-center items-center blue_border1">
           <p class="text-white font-bold text-xl">Backed by</p>
@@ -386,13 +387,13 @@
       </div>
       <footer class="text-gray-600 body-font">
         <div class="flex justify-center">
-          <img class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
-          <img class="mix-blend-lighten opacity-60 rotate-180" src="./assets/images/arrow.png" alt="">
+          <img onclick="up()" class="mix-blend-lighten opacity-60 mr-5" src="./assets/images/arrow.png" alt="">
+          <img onclick="down()" class="mix-blend-lighten opacity-60 mr-5 rotate-180" src="./assets/images/arrow.png" alt="">
         </div>
       </footer>
-    </div>
+    </section>
 
-    <div class="section s7">
+    <section class="section s7">
       <div class="text-gray-600 text-white body-font">
         <div class="container mx-auto flex flex-wrap px-5 py-3 justify-between flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -404,15 +405,15 @@
             App</button>
         </div>
       </div>
-      <section class="text-gray-600 body-font">
-        <div class="mx-auto flex flex-col px-5 pt-14 justify-center items-center">
-          <div class="w-full md:w-2/3 flex flex-col mb-16 items-center text-center">
-            <h1 class="title-font sm:text-5xl text-3xl mb-4 leading-6 font-extrabold text-white">Download our App Today & <br>
+      <div class="text-gray-600 body-font">
+        <div class="mx-auto flex flex-col px-5 pt-8 justify-center items-center">
+          <div class="w-full md:w-2/3 flex flex-col mb-8 items-center text-center">
+            <h1 class="title-font sm:leading-tight sm:text-5xl text-3xl mb-4 font-extrabold text-white">Download our App Today & <br>
               Experience Endless Possibilites</h1>
             <button
               class="inline-flex rounded-lg text-white bg-blue-500 border-0 py-2 px-6 my-2 focus:outline-none hover:bg-blue-600 text-lg">Download
               the app now</button>
-            <div class="flex w-full blue_border my-12 justify-between items-center">
+            <div class="flex w-full blue_border my-8 justify-between items-center">
               <p class="text-xl font-bold text-white">Subscribe to our <br> Monthly Newsletter</p>
               <div class="flex-1"></div>
               <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4 md:w-full text-left">
@@ -440,16 +441,17 @@
         </div>
         <footer class="text-gray-600 body-font">
           <div class="flex justify-center">
-            <img class="mix-blend-lighten opacity-60" src="./assets/images/home.png" alt="">
+            <img onclick="home()" class="mix-blend-lighten opacity-60" src="./assets/images/home.png" alt="">
           </div>
         </footer>
-      </section>
-    </div>
+      </div>
+    </section>
   </div>
 
 
-  <script src="./assets/js/fullpage.min.js"></script>
+  <script src="./assets/js/jquery.onepage-scroll.js"></script>
   <script src="./assets/js/index.js"></script>
+  <script src="./assets/js/jq.js"></script>
 </body>
 
 </html>
