--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </div>
       </div>
       <div class="text-gray-600 body-font">
-        <div class="mx-auto flex px-5 py-24 items-center justify-center flex-col">
+        <div class="mx-auto flex px-5 py-16 items-center justify-center flex-col">
           <div class="text-center lg:w-2/3 w-full">
-            <h1 class="title-font sm:text-6xl text-3xl mb-4 font-extrabold text-white">Making Crypto Investing Simple
+            <h1 class="title-font sm:text-6xl text-3xl mb-4 cc_bg font-extrabold text-white">Making Crypto Investing Simple
             </h1>
-            <p class="mb-8 sm:text-3xl text-xl whitish leading-relaxed">We handpick and curate baskets of undervalued crypto <br>
-              tokens so that you can invest seamlessly and win.</p>
+            <p class="my-12 sm:text-3xl text-lg whitish sm:leading-normal">We handpick and curate baskets of undervalued crypto
+              tokens <br> so that you can invest seamlessly and win.</p>
             <div class="flex justify-center">
               <button
                 class="inline-flex rounded-lg text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 text-lg">Download
@@ -81,7 +81,7 @@
             class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <h1 class="title-font sm:text-5xl text-3xl mb-4 font-extrabold text-white">Crypto Investing Simplified
             </h1>
-            <p class="mb-8 text-2xl whitish leading-relaxed">We at Cryptocase aim to make your investment journey <br>
+            <p class="mb-4 sm:text-2xl text-lg whitish leading-relaxed">We at Cryptocase aim to make your investment journey <br>
               through Crypto smoother, safer and less riskier.</p>
             <div class="flex justify-center">
               <button
